--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,14 @@ form {
   margin-top: 30px;
 }
 
+ul {
+  background-color: white;
+}
+
+li {
+  background-color: white;
+}
+
 #input {
   background-color: #f2f6f7;
   border: 1px solid #5ab9c1;
@@ -52,4 +60,35 @@ form {
   padding: 40px;
   border-radius: 10px;
   box-shadow: 0px 1px 15px rgba(0, 0, 0, 0.1);
+}
+
+.item-flex {
+  display: flex;
+  justify-content: left;
+  background-color: white;
+  align-items: center;
+}
+
+.close {
+  margin-left: 20px;
+  color: #5ab9c1;
+  align-self: center;
+}
+
+.close:hover,
+.close:focus {
+  cursor: pointer;
+  text-decoration: underline;
+}
+
+.done {
+  text-decoration: line-through;
+}
+
+.hidden {
+  display: none;
+}
+
+.item-left {
+  font-size: 20px;
 }
